[package]
name = "next-auto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


#image processing
image = "^0.24"

tokio = { version = "1", features = ["full"] }

rand = "0.8.5"
image-compare = "0.3.0"
regex = "1.8.4"
